[tool.poetry]
name = "osaAPI"
version = "1.0.0"
description = ""
authors = ["Ingrammicro Inc.", "Rahul Mondal <rahul.mondal@ingrammicro.com>"]
readme = "README.md"
packages = [{include = "osaapi"}]

[tool.poetry.dependencies]
python = ">=2,<3.7"

[tool.poetry.group.test.dependencies]
flake8 = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
    ".idea",
    ".vscode",
    ".git",
    "resources",
    "*.eggs",
    "tests/fixtures",
    "connect/.data",
    "venv"
]

show_source = true
max_line_length = 100
max_cognitive_complexity = 15
ignore = ["FI1", "W503", "B008"]

