[tool.poetry]
name = "osaAPI"
version = "1.0.0"
description = ""
authors = ["Ingrammicro Inc.", "Rahul Mondal <rahul.mondal@ingrammicro.com>"]
readme = "README.md"
packages = [{include = "osaapi"}]

[tool.poetry.dependencies]
python = ">=2,<3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
